design 2nd page

--- a/index.html
+++ b/index.html
@@ -24,13 +24,72 @@
 </style>
 
 <body class="bg-black min-h-screen">
-    <section class="text-white min-h-screen bg-center"
+    <section class="container mx-auto min-h-screen bg-center"
         style="background-image: url(./images/background.png); background-repeat: no-repeat;">
-        <div class="flex flex-col items-center justify-center min-h-screen">
+        <div class="flex flex-col items-center justify-center min-h-screen hidden text-white" id="start-screen">
             <h1 class="text-9xl">ALPHABET CLASH</h1>
             <p class="my-5">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
             <button class="btn bg-[white]" id="start-button">Play Now</button>
         </div>
+
+        <div class="flex flex-col items-center justify-center min-h-screen">
+            <div class="hero bg-[#FFFFFFB2] border-4 border-[#010313CC] mx-auto py-15 mb-10">
+                <div class="hero-content text-center">
+                    <div class="max-w-md">
+                        <h1 class="text-6xl font-bold text-black">Y</h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="my-1 flex w-full justify-center gap-1">
+                <kbd class="kbd">q</kbd>
+                <kbd class="kbd">w</kbd>
+                <kbd class="kbd">e</kbd>
+                <kbd class="kbd">r</kbd>
+                <kbd class="kbd">t</kbd>
+                <kbd class="kbd">y</kbd>
+                <kbd class="kbd">u</kbd>
+                <kbd class="kbd">i</kbd>
+                <kbd class="kbd">o</kbd>
+                <kbd class="kbd">p</kbd>
+            </div>
+            <div class="my-1 flex w-full justify-center gap-1">
+                <kbd class="kbd">a</kbd>
+                <kbd class="kbd">s</kbd>
+                <kbd class="kbd">d</kbd>
+                <kbd class="kbd">f</kbd>
+                <kbd class="kbd">g</kbd>
+                <kbd class="kbd">h</kbd>
+                <kbd class="kbd">j</kbd>
+                <kbd class="kbd">k</kbd>
+                <kbd class="kbd">l</kbd>
+            </div>
+            <div class="my-1 flex w-full justify-center gap-1">
+                <kbd class="kbd">z</kbd>
+                <kbd class="kbd">x</kbd>
+                <kbd class="kbd">c</kbd>
+                <kbd class="kbd">v</kbd>
+                <kbd class="kbd">b</kbd>
+                <kbd class="kbd">n</kbd>
+                <kbd class="kbd">m</kbd>
+                <kbd class="kbd">/</kbd>
+            </div>
+            <div class="flex justify-between mt-10 w-full">
+                <button
+                    class="btn w-35 items-center border-0 bg-[#894189] text-white flex gap-2 px-7 py-2 rounded-full shadow-none">
+                    Life
+                    <img src="./images/Group 23.svg" alt="">
+                    1
+                </button>
+                <button
+                    class=" btn w-35 items-center border-0 shadow-none bg-[#360490] text-white flex gap-2 px-7 py-2 rounded-full">
+                    Score
+                    <img src="./images/monetization_on.svg" alt="">
+                    1
+                </button>
+            </div>
+        </div>
+
     </section>
 </body>
 
