--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="btn bg-[white]" id="start-button">Play Now</button>
         </div>
 
-        <div class="flex flex-col items-center justify-center min-h-screen">
+        <div class="flex flex-col items-center justify-center min-h-screen hidden">
             <div class="hero bg-[#FFFFFFB2] border-4 border-[#010313CC] mx-auto py-15 mb-10">
                 <div class="hero-content text-center">
                     <div class="max-w-md">
@@ -87,6 +87,15 @@
                     <img src="./images/monetization_on.svg" alt="">
                     1
                 </button>
+            </div>
+        </div>
+
+        <div class="flex flex-col items-center justify-center min-h-screen text-white" id="game-over-screen">
+            <div
+                class="bg-[linear-gradient(121deg,_rgba(255,255,255,0.56)_0%,_rgba(152,151,151,0)_102.2%)] border-1 border-[#FFFFFF33] rounded-lg text-center p-5">
+                <h1 class="text-5xl"><span class="font-bold">Score :</span> 14</h1>
+                <button class=" btn bg-[white] my-3" id="start-button">Play Now</button>
+                <p>Practice will make you Pro</p>
             </div>
         </div>
 
