--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body class="bg-black min-h-screen">
     <section class="container mx-auto min-h-screen bg-center"
         style="background-image: url(./images/background.png); background-repeat: no-repeat;">
-        <div class="flex flex-col items-center justify-center min-h-screen hidden text-white" id="start-screen">
-            <h1 class="text-9xl">ALPHABET CLASH</h1>
+        <div class="flex flex-col items-center justify-center min-h-screen text-white" id="start-screen">
+            <h1 class="text-9xl font-bold">ALPHABET CLASH</h1>
             <p class="my-5">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
             <button class="btn bg-[white]" id="start-button">Play Now</button>
         </div>
@@ -90,7 +90,7 @@
             </div>
         </div>
 
-        <div class="flex flex-col items-center justify-center min-h-screen text-white" id="game-over-screen">
+        <div class="flex flex-col items-center justify-center min-h-screen text-white hidden" id="game-over-screen">
             <div
                 class="bg-[linear-gradient(121deg,_rgba(255,255,255,0.56)_0%,_rgba(152,151,151,0)_102.2%)] border-1 border-[#FFFFFF33] rounded-lg text-center p-5">
                 <h1 class="text-5xl"><span class="font-bold">Score :</span> 14</h1>
