--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <button class="btn bg-[white]" id="start-button">Play Now</button>
         </div>
 
-        <div class="flex flex-col items-center justify-center min-h-screen hidden">
+        <div id="game-screen" class="flex flex-col items-center justify-center min-h-screen hidden">
             <div class="hero bg-[#FFFFFFB2] border-4 border-[#010313CC] mx-auto py-15 mb-10">
                 <div class="hero-content text-center">
                     <div class="max-w-md">
-                        <h1 class="text-6xl font-bold text-black">Y</h1>
+                        <h1 id="show-alphabet" class="text-6xl font-bold text-black">Y</h1>
                     </div>
                 </div>
             </div>
