--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     class=" btn w-35 items-center border-0 shadow-none bg-[#360490] text-white flex gap-2 px-7 py-2 rounded-full">
                     Score
                     <img src="./images/monetization_on.svg" alt="">
-                    1
+                    <span class="live-score">0</span>
                 </button>
             </div>
         </div>
